--- a/WillItLaunch/nbproject/project.properties
+++ b/WillItLaunch/nbproject/project.properties
@@ -1,6 +1,5 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
@@ -31,15 +30,15 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.javax.websocket-api-1.1.jar=lib\\javax.websocket-api-1.1.jar
-file.reference.lib-jfxtras-styles-master=lib/jfxtras-styles-master
+file.reference.jfxtras-all-8.0-r3.jar=lib/jfxtras-all-8.0-r3.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
 jar.compress=false
 javac.classpath=\
     ${javafx.classpath.extension}:\
-    ${file.reference.lib-jfxtras-styles-master}:\
-    ${file.reference.javax.websocket-api-1.1.jar}
+    ${file.reference.javax.websocket-api-1.1.jar}:\
+    ${file.reference.jfxtras-all-8.0-r3.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -107,6 +106,7 @@ manifest.custom.codebase=*
 manifest.custom.permissions=
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
+mkdist.disabled=false
 platform.active=default_platform
 run.classpath=\
     ${dist.jar}:\
