--- a/WillItLaunch/nbproject/project.properties
+++ b/WillItLaunch/nbproject/project.properties
@@ -29,7 +29,7 @@ dist.jar=${dist.dir}/WillItLaunch.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.javax.websocket-api-1.1.jar=lib\\javax.websocket-api-1.1.jar
+file.reference.java_websocket.jar=lib\\java_websocket.jar
 file.reference.jfxtras-all-8.0-r3.jar=lib/jfxtras-all-8.0-r3.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
@@ -37,8 +37,8 @@ jar.archive.disabled=true
 jar.compress=false
 javac.classpath=\
     ${javafx.classpath.extension}:\
-    ${file.reference.javax.websocket-api-1.1.jar}:\
-    ${file.reference.jfxtras-all-8.0-r3.jar}
+    ${file.reference.jfxtras-all-8.0-r3.jar}:\
+    ${file.reference.java_websocket.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -48,7 +48,8 @@ javac.source=1.8
 javac.target=1.8
 javac.test.classpath=\
     ${javac.classpath}:\
-    ${build.classes.dir}
+    ${build.classes.dir}:\
+    ${libs.junit_4.classpath}
 javac.test.processorpath=\
     ${javac.test.classpath}
 javadoc.additionalparam=
@@ -68,12 +69,16 @@ javafx.classpath.extension=\
     ${java.home}/lib/javaws.jar:\
     ${java.home}/lib/deploy.jar:\
     ${java.home}/lib/plugin.jar
+javafx.deploy.adddesktopshortcut=false
+javafx.deploy.addstartmenushortcut=false
 javafx.deploy.allowoffline=true
 # If true, application update mode is set to 'background', if false, update mode is set to 'eager'
 javafx.deploy.backgroundupdate=false
+javafx.deploy.disable.proxy=false
 javafx.deploy.embedJNLP=true
 javafx.deploy.includeDT=true
-javafx.deploy.permissionselevated=true
+javafx.deploy.installpermanently=false
+javafx.deploy.permissionselevated=false
 # Set true to prevent creation of temporary copy of deployment artifacts before each run (disables concurrent runs)
 javafx.disable.concurrent.runs=false
 # Set true to enable multiple concurrent runs of the same WebStart or Run-in-Browser project
@@ -94,7 +99,8 @@ javafx.preloader.type=none
 javafx.rebase.libs=false
 javafx.run.height=600
 javafx.run.width=800
-javafx.signing.enabled=true
+javafx.signing.blob=false
+javafx.signing.enabled=false
 javafx.signing.type=self
 # Pre-JavaFX 2.0 WebStart is deactivated in JavaFX 2.0+ projects
 jnlp.enabled=false
@@ -107,6 +113,7 @@ manifest.custom.permissions=
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
+native.bundling.enabled=false
 platform.active=default_platform
 run.classpath=\
     ${dist.jar}:\
