propject prop file fixed'

--- a/WillItLaunch/nbproject/project.properties
+++ b/WillItLaunch/nbproject/project.properties
@@ -29,6 +29,7 @@ dist.jar=${dist.dir}/WillItLaunch.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.Enzo-0.2.2.jar=lib\\Enzo-0.2.2.jar
 file.reference.java_websocket.jar=lib\\java_websocket.jar
 file.reference.jfxtras-all-8.0-r3.jar=lib/jfxtras-all-8.0-r3.jar
 includes=**
@@ -38,7 +39,8 @@ jar.compress=false
 javac.classpath=\
     ${javafx.classpath.extension}:\
     ${file.reference.jfxtras-all-8.0-r3.jar}:\
-    ${file.reference.java_websocket.jar}
+    ${file.reference.java_websocket.jar}:\
+    ${file.reference.Enzo-0.2.2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
